# chandra-project

./: .gitattributes  .gitignore  .pre-commit-config.yaml  DEVELOPMENT.md  Diagram-Description.md  Individual Capstone Assessment - PAD.md  Milestone-TimeLine-EffortMatrix.md  Professional Biography - CL.md  Professional Biography - PAD.md  Project-Description.md  README.md  Tasklist.md  User-Stories.md  main.py  pixi.toml  pyproject.toml  requirements.txt
.devcontainer/: .env.example  Dockerfile  configure.sh  devcontainer.json  install.sh  install_openssl1.1.sh  install_ros2_dependencies.sh  ros_deps.sh
Documents/: CS5002-advisor-eval.doc  Constraint-Essay.md  Constrant-Essay.md  Expense_Sheet.csv  Final-Design-Report.md  Individual Capstone Assessment - CL.md  Individual Capstone Assessment - PAD.md  Milestone-TimeLine-EffortMatrix.md  Professional Biography - CL.md  Professional Biography - PAD.md  Project-Description.md  Tasklist.md  User-Manual.md  User-Stories.md
Documents/Design Diagram/: Diagram-Description.md
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.tsx
frontend/src/components/: AudioRecorder.tsx
scripts/: dev.py  ghost_sim.sh  mvlink.sh  pupper_sim.py  sim.py
src/: agents.py  brigde.py  client.py  launch.py  mavlink.py  mavlink_daemon.py  mavlink_wrapper.py  mm_client.py  parser.py  server.py
src/data/: agentic_prompt.txt  agentic_prompt_1.txt  system_prompt.txt  test.json
